chore: changes for styles

--- a/reference/SimpleCalc/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/SimpleCalc/SimpleCalculator/SimpleCalculator.csproj
@@ -81,5 +81,9 @@
 	  <Page Update="MainPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </Page>
+	  <Page Update="Styles\ColorPaletteOverride.xaml">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
 	</ItemGroup>
 </Project>
