chore: Fixing references

--- a/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -78,7 +78,6 @@
 	<ItemGroup>
 	  <Folder Include="Business\" />
 	  <Folder Include="Keyboard\" />
-	  <Folder Include="Styles\" />
 	  <Folder Include="ThemeService\" />
 	</ItemGroup>
 
@@ -86,6 +85,9 @@
 	  <Page Include="..\..\..\resources\ColorPaletteOverride.xaml" Link="Styles\ColorPaletteOverride.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </Page>
+	  <Page Include="..\..\..\resources\MaterialFontsOverride.xaml" Link="Styles\MaterialFontsOverride.xaml">
+	    <Generator>MSBuild:Compile</Generator>
 	  </Page>
 	</ItemGroup>
 </Project>
