chore: adjusting styles for c# markup

--- a/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -69,6 +69,7 @@
 	<ItemGroup>
 	  <Compile Include="..\..\..\resources\AppThemeService.cs" Link="ThemeService\AppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
+	  <Compile Include="..\..\..\resources\ColorPaletteOverride.cs" Link="Styles\ColorPaletteOverride.cs" />
 	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\KeyboardBehavior.cs" Link="Keyboard\KeyboardBehavior.cs" />
 	  <Compile Include="..\..\..\resources\KeyInput.cs" Link="Business\KeyInput.cs" />
@@ -79,15 +80,5 @@
 	  <Folder Include="Business\" />
 	  <Folder Include="Keyboard\" />
 	  <Folder Include="ThemeService\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Page Include="..\..\..\resources\ColorPaletteOverride.xaml" Link="Styles\ColorPaletteOverride.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </Page>
-	  <Page Include="..\..\..\resources\MaterialFontsOverride.xaml" Link="Styles\MaterialFontsOverride.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </Page>
 	</ItemGroup>
 </Project>
