--- a/reference/simple-calc/MVVM C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVVM C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -67,20 +67,12 @@
 	<ItemGroup>
 	  <Compile Include="..\..\..\resources\AppThemeService.cs" Link="ThemeService\AppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
+	  <Compile Include="..\..\..\resources\ColorPaletteOverride.cs" Link="Styles\ColorPaletteOverride.cs" />
 	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\IsExternalInit.cs" Link="IsExternalInit.cs" />
 	  <Compile Include="..\..\..\resources\KeyboardBehavior.cs" Link="Keyboard\KeyboardBehavior.cs" />
 	  <Compile Include="..\..\..\resources\KeyInput.cs" Link="Business\KeyInput.cs" />
 	  <Compile Include="..\..\..\resources\MainPageMarkup.cs" Link="MainPageMarkup.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Page Include="..\..\..\resources\ColorPaletteOverride.xaml" Link="Styles\ColorPaletteOverride.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </Page>
-	  <Page Include="..\..\..\resources\MaterialFontsOverride.xaml" Link="Styles\MaterialFontsOverride.xaml">
-	    <Generator>MSBuild:Compile</Generator>
-	  </Page>
 	</ItemGroup>
 
 	<ItemGroup>
