chore: Adding Models to resource

--- a/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -71,11 +71,13 @@
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
 	  <Compile Include="..\..\..\resources\ColorPaletteOverride.cs" Link="Styles\ColorPaletteOverride.cs" />
 	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
+	  <Compile Include="..\..\..\resources\MainModel.cs" Link="Presentation\MainModel.cs" />
 	  <Compile Include="..\..\..\resources\MainPageMarkup.cs" Link="MainPageMarkup.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Business\" />
+	  <Folder Include="Presentation\" />
 	  <Folder Include="ThemeService\" />
 	</ItemGroup>
 </Project>
