--- a/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -66,11 +66,13 @@
 	  <Compile Include="..\..\..\resources\AppThemeService.cs" Link="ThemeService\AppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
 	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
+	  <Compile Include="..\..\..\resources\MainModel.cs" Link="Presentation\MainModel.cs" />
 	  <Compile Include="..\..\..\resources\MainPage.xaml.cs" Link="MainPage.xaml.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Business\" />
+	  <Folder Include="Presentation\" />
 	  <Folder Include="Styles\" />
 	  <Folder Include="ThemeService\" />
 	</ItemGroup>
