--- a/reference/simple-calc/MVVM C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVVM C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -71,10 +71,12 @@
 	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\IsExternalInit.cs" Link="IsExternalInit.cs" />
 	  <Compile Include="..\..\..\resources\MainPageMarkup.cs" Link="MainPageMarkup.cs" />
+	  <Compile Include="..\..\..\resources\MainViewModel.cs" Link="Presentation\MainViewModel.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Business\" />
+	  <Folder Include="Presentation\" />
 	  <Folder Include="ThemeService\" />
 	  <Folder Include="Styles\" />
 	</ItemGroup>
