--- a/reference/simple-calc/MVVM Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVVM Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -66,6 +66,7 @@
 	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\IsExternalInit.cs" Link="IsExternalInit.cs" />
 	  <Compile Include="..\..\..\resources\MainPage.xaml.cs" Link="MainPage.xaml.cs" />
+	  <Compile Include="..\..\..\resources\MainViewModel.cs" Link="Presentation\MainViewModel.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -79,6 +80,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Business\" />
+	  <Folder Include="Presentation\" />
 	  <Folder Include="ThemeService\" />
 	  <Folder Include="Styles\" />
 	</ItemGroup>
