--- a/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -14,13 +14,14 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.497" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.6" />
-		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.6" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.8" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.8" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.536" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.536" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.14" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.14" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.15" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.16" />
-		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.6" />
+		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.14" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
 
@@ -47,7 +48,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.908" />
+				<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.981" />
 			</ItemGroup>
 
 			<ItemGroup>
@@ -70,7 +71,6 @@
 	  <Compile Include="..\..\..\resources\AppThemeService.cs" Link="ThemeService\AppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
 	  <Compile Include="..\..\..\resources\ColorPaletteOverride.cs" Link="Styles\ColorPaletteOverride.cs" />
-	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\MainModel.cs" Link="Presentation\MainModel.cs" />
 	  <Compile Include="..\..\..\resources\MainPageMarkup.cs" Link="MainPageMarkup.cs" />
 	</ItemGroup>
