--- a/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
+++ b/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
@@ -21,12 +21,13 @@
 		<IsUnoHead>true</IsUnoHead>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.497" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.6" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.8" />
-		<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.908" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.730" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.730" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.536" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.536" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.14" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.993" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.0-dev.993" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.993" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="'$(TargetFramework)'=='net6.0-android'">
