--- a/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -14,9 +14,10 @@
 	</PropertyGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.497" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.6" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.8" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.536" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.536" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.14" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.15" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
 
@@ -43,7 +44,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.908" />
+				<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.993" />
 			</ItemGroup>
 
 			<ItemGroup>
@@ -65,7 +66,6 @@
 	<ItemGroup>
 	  <Compile Include="..\..\..\resources\AppThemeService.cs" Link="ThemeService\AppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
-	  <Compile Include="..\..\..\resources\IAppThemeService.cs" Link="ThemeService\IAppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\MainModel.cs" Link="Presentation\MainModel.cs" />
 	  <Compile Include="..\..\..\resources\MainPage.xaml.cs" Link="MainPage.xaml.cs" />
 	</ItemGroup>
