--- a/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVU-X C#/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<Content Include="Images\**" />
+		<None Remove="Images\Square44x44Logo.png" />
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
 
