--- a/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -50,7 +50,6 @@
 			<ItemGroup>
 				<Content Include="Assets\**" />
 				<Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-				<ApplicationDefinition Include="App.xaml" Condition="exists('App.xaml')" />
 				<Compile Update="**\*.xaml.cs">
 					<DependentUpon>%(Filename)</DependentUpon>
 				</Compile>
@@ -68,6 +67,8 @@
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
 	  <Compile Include="..\..\..\resources\MainModel.cs" Link="Presentation\MainModel.cs" />
 	  <Compile Include="..\..\..\resources\MainPage.xaml.cs" Link="MainPage.xaml.cs" />
+	  <Compile Include="..\..\..\resources\AppStart.xaml.cs" Link="AppStart.cs" />
+	  <Compile Include="..\SimpleCalculator.Base\IsExternalInit.cs" Visible="false" />
 	</ItemGroup>
 
 	<ItemGroup>
