--- a/reference/simple-calc/MVVM Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVVM Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -48,7 +48,6 @@
 			<ItemGroup>
 				<Content Include="Assets\**" />
 				<Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
-				<ApplicationDefinition Include="App.xaml" Condition="exists('App.xaml')" />
 				<Compile Update="**\*.xaml.cs">
 					<DependentUpon>%(Filename)</DependentUpon>
 				</Compile>
@@ -64,9 +63,10 @@
 	<ItemGroup>
 	  <Compile Include="..\..\..\resources\AppThemeService.cs" Link="ThemeService\AppThemeService.cs" />
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
-	  <Compile Include="..\..\..\resources\IsExternalInit.cs" Link="IsExternalInit.cs" />
 	  <Compile Include="..\..\..\resources\MainPage.xaml.cs" Link="MainPage.xaml.cs" />
 	  <Compile Include="..\..\..\resources\MainViewModel.cs" Link="Presentation\MainViewModel.cs" />
+	  <Compile Include="..\..\..\resources\AppStart.xaml.cs" Link="AppStart.cs" />
+	  <Compile Include="..\SimpleCalculator.Base\IsExternalInit.cs" Visible="false" />
 	</ItemGroup>
 
 	<ItemGroup>
