--- a/UI/MapControlSample/MapControlSample/MapControlSample.Mobile/MapControlSample.Mobile.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Mobile/MapControlSample.Mobile.csproj
@@ -13,8 +13,8 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-maccatalyst'">maccatalyst-x64</RuntimeIdentifier>
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
-  <ItemGroup>
-	<PackageReference Include="Uno.WinUI.Maps" Version="4.6.19" />		  
+  <ItemGroup>	
+	<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0-beta.6" />
 	<PackageReference Include="Uno.WinUI" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
