--- a/UI/MapControlSample/MapControlSample/MapControlSample.Wasm/MapControlSample.Wasm.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Wasm/MapControlSample.Wasm.csproj
@@ -41,7 +41,8 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+	<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0-beta.6" />
+	<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
