--- a/UI/MapControlSample/MapControlSample/MapControlSample.Windows/MapControlSample.Windows.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Windows/MapControlSample.Windows.csproj
@@ -23,6 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0-beta.6" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221116.1" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
