--- a/reference/simple-calc/MVVM C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVVM C#/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.1</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041</TargetFrameworks>
@@ -46,7 +46,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Uno.WinUI" Version="4.7.0-dev.993" />
+				<PackageReference Include="Uno.WinUI" Version="4.8.0-dev.6" />
 			</ItemGroup>
 
 			<ItemGroup>
