--- a/reference/simple-calc/MVVM-Xaml/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
+++ b/reference/simple-calc/MVVM-Xaml/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net7.0-android;net7.0-ios;net7.0-maccatalyst</TargetFrameworks>
 		<!-- Disabled because of https://github.com/xamarin/xamarin-macios/issues/16401-->
-		<!-- <TargetFrameworks>$(TargetFrameworks);net6.0-macos</TargetFrameworks> -->
+		<!-- <TargetFrameworks>$(TargetFrameworks);net7.0-macos</TargetFrameworks> -->
 		<SingleProject>true</SingleProject>
 		<OutputType>Exe</OutputType>
 		<!-- Display name -->
@@ -15,9 +15,9 @@
 		<ApplicationVersion>1</ApplicationVersion>
 
 		<!-- Debugger workaround https://github.com/dotnet/maui-samples/blob/8aa6b8780b12e97b157514c3bdc54bb4a13001cd/HelloMacCatalyst/HelloMacCatalyst.csproj#L7 -->
-		<!-- <MtouchExtraArgs Condition="'$(TargetFramework)' == 'net6.0-maccatalyst'">$(MtouchExtraArgs) -setenv:MONO_THREADS_SUSPEND=preemptive</MtouchExtraArgs> -->
+		<!-- <MtouchExtraArgs Condition="'$(TargetFramework)' == 'net7.0-maccatalyst'">$(MtouchExtraArgs) -setenv:MONO_THREADS_SUSPEND=preemptive</MtouchExtraArgs> -->
 		<!-- Required for C# Hot Reload -->
-		<UseInterpreter Condition="'$(Configuration)' == 'Debug' and '$(TargetFramework)' != 'net6.0-maccatalyst'">True</UseInterpreter>
+		<UseInterpreter Condition="'$(Configuration)' == 'Debug' and '$(TargetFramework)' != 'net7.0-maccatalyst'">True</UseInterpreter>
 		<IsUnoHead>true</IsUnoHead>
 	</PropertyGroup>
 	<ItemGroup>
@@ -26,10 +26,10 @@
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
 		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.993" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
 	</ItemGroup>
 	<Choose>
-		<When Condition="'$(TargetFramework)'=='net6.0-android'">
+		<When Condition="'$(TargetFramework)'=='net7.0-android'">
 			<ItemGroup>
 				<PackageReference Include="Xamarin.Google.Android.Material" Version="1.7.0.1" />
 				<PackageReference Include="Uno.UniversalImageLoader" Version="1.9.36" />
@@ -38,8 +38,8 @@
 				<AndroidEnvironment Include="Android/environment.conf" />
 			</ItemGroup>
 		</When>
-		<When Condition="'$(TargetFramework)'=='net6.0-ios'">
-			<PropertyGroup Condition="'$(TargetFramework)'=='net6.0-ios'">
+		<When Condition="'$(TargetFramework)'=='net7.0-ios'">
+			<PropertyGroup Condition="'$(TargetFramework)'=='net7.0-ios'">
 				<MtouchExtraArgs>$(MtouchExtraArgs) --setenv=MONO_GC_PARAMS=soft-heap-limit=512m,nursery-size=64m,evacuation-threshold=66,major=marksweep,concurrent-sweep</MtouchExtraArgs>
 				<!-- See https://github.com/unoplatform/uno/issues/9430 for more details. -->
 				<MtouchExtraArgs>$(MtouchExtraArgs) --registrar:static</MtouchExtraArgs>
@@ -50,7 +50,7 @@
 				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 			</ItemGroup>
 		</When>
-		<When Condition="'$(TargetFramework)'=='net6.0-maccatalyst'">
+		<When Condition="'$(TargetFramework)'=='net7.0-maccatalyst'">
 			<PropertyGroup>
 				<!-- Configure the GC -->
 				<MtouchExtraArgs>$(MtouchExtraArgs) --setenv=MONO_GC_PARAMS=soft-heap-limit=512m,nursery-size=64m,evacuation-threshold=66,major=marksweep,concurrent-sweep</MtouchExtraArgs>
@@ -65,7 +65,7 @@
 				<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
 			</ItemGroup>
 		</When>
-		<When Condition="'$(TargetFramework)'=='net6.0-macos'">
+		<When Condition="'$(TargetFramework)'=='net7.0-macos'">
 			<PropertyGroup>
 				<TrimMode Condition="'$(Configuration)'=='Release'">link</TrimMode>
 			</PropertyGroup>
@@ -73,6 +73,9 @@
 	</Choose>
 	<ItemGroup>
 		<ProjectReference Include="..\SimpleCalculator\SimpleCalculator.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.4.0" />
 	</ItemGroup>
 	<Import Project="../SimpleCalculator.Base/base.props" />
 </Project>
