fix: heads build

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
@@ -23,7 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="SkiaSharp.Views" Version="2.88.3" />
+		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.3" />
 		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221116.1" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
