--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
@@ -40,9 +40,11 @@
     <None Include="LinkerConfig.xml" />
     <None Include="wwwroot\web.config" />
   </ItemGroup>
-  <ItemGroup>
-	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />  
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />    
+  <ItemGroup>	
+	<PackageReference Include="SkiaSharp" Version="2.88.3" />	
+	<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />	
+	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
     <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
