chore: Update to latest uno

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/Properties/launchSettings.json
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "profiles": {
     "SkiaSharpTest.Windows": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
     }
   }
 }
