--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Windows/SkiaSharpTest.Windows.csproj
@@ -10,6 +10,9 @@
 		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
+		
+		
+		<WindowsAppSdkDeploymentManagerInitialize>false</WindowsAppSdkDeploymentManagerInitialize>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -24,8 +27,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="SkiaSharp.Views.WinUI" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221116.1" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
