--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Wasm/SkiaSharpTest.Wasm.csproj
@@ -41,17 +41,18 @@
     <None Include="wwwroot\web.config" />
   </ItemGroup>
   <ItemGroup>	
+	<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />	
 	<PackageReference Include="SkiaSharp" Version="2.88.3" />	
 	<PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="2.88.3" />	
 	<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.3" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.3" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+    <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.30" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.30" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.12" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.12" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.7.30" />
   </ItemGroup>
   <Import Project="..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems" Label="Shared" Condition="Exists('..\SkiaSharpTest.Shared\SkiaSharpTest.Shared.projitems')" />
 </Project>
