--- a/reference/simple-calc/MVVM Xaml/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVVM Xaml/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<Content Include="Images\**" />
+		<None Remove="Images\Square44x44Logo.png" />
 		<Manifest Include="$(ApplicationManifest)" />
 	</ItemGroup>
 
