--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
 		<OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
-		<TargetFramework>net6.0-windows</TargetFramework>
+		<TargetFramework>net7.0-windows</TargetFramework>
 		<UseWPF>true</UseWPF>
 		<ApplicationIcon>Images\logo.ico</ApplicationIcon>
 	</PropertyGroup>
@@ -49,5 +49,8 @@
 	<Import Project="../SimpleCalculator.Base/base.props" />
 	<ItemGroup>
 	  <SourceGeneratorInput Remove="Images\logo.ico" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.4.0" />
 	</ItemGroup>
 </Project>
