--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -28,7 +28,10 @@
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.628" />
 		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.628" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.21" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.18" />
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
