chore: bringing extensions.markup in to fix resource issue

--- a/reference/simple-calc/MVU-X CSharp/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/simple-calc/MVU-X CSharp/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -44,6 +44,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.0" />
+		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.169" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.544" />
 		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.544" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.14" />
