--- a/reference/simple-calc/MVU-X CSharp/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
+++ b/reference/simple-calc/MVU-X CSharp/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
@@ -21,6 +21,7 @@
 		<IsUnoHead>true</IsUnoHead>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.169" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.544" />
 		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.544" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.14" />
