--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -17,12 +17,12 @@
 		<PackageReference Include="Uno.Extensions.Markup.WinUI" Version="1.0.0-dev.169" />
 		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.628" />
 		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.628" />
-		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.14" />
-		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.14" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.15" />
-		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.15" />
-		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.16" />
-		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.14" />
+		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.21" />
+		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.21" />
+		<PackageReference Include="Uno.WinUI.Markup" Version="4.7.0-dev.18" />
+		<PackageReference Include="Uno.Themes.WinUI.Markup" Version="2.5.0-dev.15" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	</ItemGroup>
 
@@ -49,7 +49,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Uno.WinUI" Version="4.8.0-dev.6" />
+				<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 			</ItemGroup>
 
 			<ItemGroup>
@@ -72,7 +72,8 @@
 	  <Compile Include="..\..\..\resources\ColorPaletteOverride.cs" Link="Styles\ColorPaletteOverride.cs" />
 	  <Compile Include="..\..\..\resources\MainModel.cs" Link="Presentation\MainModel.cs" />
 	  <Compile Include="..\..\..\resources\MainPage.cs" Link="MainPage.cs" />
-	  <Compile Include="..\..\..\resources\AppStart.markup.cs" Link="AppStart.cs" />
+	  <Compile Include="..\..\..\resources\App.cs" Link="App.cs" />
+	  <Compile Include="..\..\..\resources\AppResources.cs" Link="AppResources.cs" />
 	  <Compile Include="..\SimpleCalculator.Base\IsExternalInit.cs" Visible="false" />
 	</ItemGroup>
 
