--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
@@ -55,8 +55,8 @@
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.15" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="8.0.0-dev.77" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.0-dev.77" />
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.8.0-dev.6" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.0-dev.6" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.37" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.993" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
 	</ItemGroup>
