--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -48,7 +48,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Uno.WinUI" Version="4.8.0-dev.6" />
+				<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 			</ItemGroup>
 
 			<ItemGroup>
@@ -70,7 +70,7 @@
 	  <Compile Include="..\..\..\resources\Calculator.cs" Link="Business\Calculator.cs" />
 	  <Compile Include="..\..\..\resources\MainModel.cs" Link="Presentation\MainModel.cs" />
 	  <Compile Include="..\..\..\resources\MainPage.xaml.cs" Link="MainPage.xaml.cs" />
-	  <Compile Include="..\..\..\resources\AppStart.xaml.cs" Link="AppStart.cs" />
+	  <Compile Include="..\..\..\resources\App.cs" Link="App.cs" />
 	  <Compile Include="..\SimpleCalculator.Base\IsExternalInit.cs" Visible="false" />
 	</ItemGroup>
 
@@ -86,6 +86,9 @@
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </Page>
 	  <Page Include="..\..\..\resources\MainPage.xaml" Link="MainPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </Page>
+	  <Page Include="..\..\..\resources\AppResources.xaml" Link="AppResources.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </Page>
 	</ItemGroup>
