--- a/reference/simple-calc/MVVM-Xaml/SimpleCalculator/SimpleCalculator.Base/base.props
+++ b/reference/simple-calc/MVVM-Xaml/SimpleCalculator/SimpleCalculator.Base/base.props
@@ -1,15 +1,15 @@
 <Project>
 	<ItemGroup>
-		<None Include="$(MSBuildThisFileDirectory)App.xaml" />
-		<ApplicationDefinition Include="$(MSBuildThisFileDirectory)App.xaml"
+		<None Include="$(MSBuildThisFileDirectory)AppHead.xaml" />
+		<ApplicationDefinition Include="$(MSBuildThisFileDirectory)AppHead.xaml"
 								SubType="Designer"
 								XamlRuntime="WinUI"
 								Generator="MSBuild:Compile"
-								Link="App.xaml" />
-		<Compile Include="$(MSBuildThisFileDirectory)App.xaml.cs"
+								Link="AppHead.xaml" />
+		<Compile Include="$(MSBuildThisFileDirectory)AppHead.xaml.cs"
 				XamlRuntime="WinUI"
-				DependentUpon="App.xaml"
-				Link="App.xaml.cs" />
+				DependentUpon="AppHead.xaml"
+				Link="AppHead.xaml.cs" />
 		<Compile Include="$(MSBuildThisFileDirectory)GlobalUsings.cs"
 				Link="GlobalUsings.cs" />
 	</ItemGroup>
