chore: adjusting missing changes

--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.Mobile/SimpleCalculator.Mobile.csproj
@@ -31,7 +31,7 @@
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.7.0-dev.18" />
 		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.981" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
 	</ItemGroup>
 	<Choose>
 		<When Condition="'$(TargetFramework)'=='net6.0-android'">
