--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.Wasm/SimpleCalculator.Wasm.csproj
@@ -56,7 +56,7 @@
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.0-dev.77" />
 		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.7.37" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.981" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
 	</ItemGroup>
 	<ItemGroup>
