--- a/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
+++ b/reference/simple-calc/MVU-X-CSharp/SimpleCalculator/SimpleCalculator.Skia.Gtk/SimpleCalculator.Skia.Gtk.csproj
@@ -20,7 +20,7 @@
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.7.0-dev.18" />
 		<PackageReference Include="Uno.WinUI.Skia.Gtk" Version="4.7.37" />
 		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.981" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
 		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
 	</ItemGroup>
