--- a/reference/simple-calc/MVVM-CSharp/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
+++ b/reference/simple-calc/MVVM-CSharp/SimpleCalculator/SimpleCalculator.Skia.WPF/SimpleCalculator.Skia.WPF.csproj
@@ -26,9 +26,9 @@
 		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.21" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.21" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.7.0-dev.18" />
-		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.8.0-dev.6" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.8.0-dev.6" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.993" />
+		<PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.7.37" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
 		<PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
 		<PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
 	</ItemGroup>
