--- a/reference/simple-calc/MVVM-CSharp/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
+++ b/reference/simple-calc/MVVM-CSharp/SimpleCalculator/SimpleCalculator/SimpleCalculator.csproj
@@ -47,7 +47,7 @@
 		</When>
 		<Otherwise>
 			<ItemGroup>
-				<PackageReference Include="Uno.WinUI" Version="4.8.0-dev.6" />
+				<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 			</ItemGroup>
 
 			<ItemGroup>
